# gliomaSegmentation_TDA

./: README.md  benchmark_segmentation_brats2021.py  config.toml  dog.py  filtration_param_choice.ipynb  misc.py  parseBrats.py  preprosses.py  preprossesing_experiments.ipynb  pyproject.toml  related_works.md  requirements.txt  segmentation_TDA.py  to_do.md  tutorial_full_segmentation.ipynb
experiments/: benchmark_brain_brats2021.py  benchmark_cardiac_acdc.py  benchmark_segmentation_brats2021.py  brain_brats2025_benchmark.py  brain_brats2025_gridsearch.py  brain_brats2025_pipeline.py  brain_brats2025_timing.py  cardiac_acdc_benchmark.py  cardiac_acdc_gridsearch.py  cardiac_acdc_pipeline.py  fetal_sta_benchmark.py  fetal_sta_gridsearch.py  fetal_sta_pipeline.py
notebooks/: 20250210 Illustrations Talk ESI.ipynb  Brain V12 20231113.ipynb  Cardiac V5 20231214.ipynb  Fetal V3 20231222.ipynb  Illustrations manuscript V2 20221213.ipynb  filtration_param_choice.ipynb  tutorial_brain_segmentation.ipynb  tutorial_cardiac_segmentation.ipynb  tutorial_full_segmentation.ipynb
old_stuff/: 20250210 Illustrations Talk ESI.ipynb  Cardiac V5 20231214.ipynb  Fetal V3 20231222.ipynb  filtration_param_choice.ipynb
results/: TDAseg_scores_['max', 1, (False, False), 1, True, 1, 1, 2]_len1251.csv  VerifyModel_[1, 'max', (True, True), 1, True, 3]_len1251.csv  brain_brats2025_AUCseg_scores.csv  brain_brats2025_verifymodel_[1, 'max', (True, True), 1, True, 2]_len1251.csv  cardiac_ED_2D_oracle_scores_[1, 0, 1.0, 20, 0, 0, inf, 5, inf]_len50.csv  cardiac_acdc_verifymodel.csv  (+14 more)
src/: misc.py  (+5 more)
(+18 files in other folders)
